<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>waterlinked_dvl_driver</name>
  <version>0.0.1</version>
  <description>ROS 2 driver for Water Linked DVL devices</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/waterlinked_dvl.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/waterlinked_dvl/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>marine_acoustic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libwaterlinked</depend>
  <depend>generate_parameter_library</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
